sc/source/ui/inc/viewdata.hxx
@@ -227,6 +227,8 @@ private:
     bool                bSelCtrlMouseClick:1;       // special selection handling for ctrl-mouse-click
     bool                bMoveArea:1;
 
+    bool                bGrowing;
+
     long                m_nLOKPageUpDownOffset;
     
     DECL_DLLPRIVATE_LINK( EditEngineHdl, EditStatus&, void );
